Add: Layout and components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,7 @@
 ---
-
+import MainLayout from '../layouts/MainLayout.astro'
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>hola mundo</h1>
-	</body>
-</html>
+<MainLayout title="DebugStart - Inicio">
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi animi eum inventore ipsa illo eaque dolorum ut dignissimos distinctio molestias! Excepturi facere vitae, distinctio fugiat pariatur voluptas non tenetur nostrum!</p>
+</MainLayout>
