Add: BlogPost component, markdown

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,10 +4,10 @@ import Logo from "./Logo.astro";
 
 <div class="max-w-full mx-auto">
 
-    <nav class=" bg-teal-900 p-2 mb-10">
+    <nav class=" bg-teal-900 p-2 ">
       <div class="container mx-auto flex flex-wrap items-center justify-between">
       <a href="/" class="flex text-white">
-       <Logo />
+      <Logo />
           <span class="self-center text-lg font-semibold whitespace-nowrap ml-2">Blog DebugStart</span>
       </a>
       <div class="flex md:order-2">
@@ -26,13 +26,13 @@ import Logo from "./Logo.astro";
       <div class="hidden md:flex justify-between items-center w-full md:w-auto md:order-1" id="mobile-menu-3">
         <ul class="flex-col md:flex-row flex md:space-x-8 mt-4 md:mt-0 md:text-sm md:font-medium">
           <li>
-            <a href="/" class="text-gray-200 hover:bg-yellow-600 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-yellow-500 md:p-0 rounded" aria-current="page">Home</a>
+            <a href="/" class="text-gray-200 hover:bg-yellow-600 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-yellow-500 md:p-0 rounded text-lg" aria-current="page">Home</a>
           </li>
           <li>
-            <a href="/about" class="text-gray-200 hover:bg-yellow-600 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-yellow-500 md:p-0 rounded">About</a>
+            <a href="/about" class="text-gray-200 hover:bg-yellow-600 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-yellow-500 md:p-0 rounded text-lg">About</a>
           </li>
           <li>
-            <a href="/blog" class="text-gray-200 hover:bg-yellow-600 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-yellow-500 md:p-0 rounded">Blog</a>
+            <a href="/blog" class="text-gray-200 hover:bg-yellow-600 border-b border-gray-100 md:hover:bg-transparent md:border-0 block pl-3 pr-4 py-2 md:hover:text-yellow-500 md:p-0 rounded text-lg">Blog</a>
           </li>
         </ul>
       </div>
