--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,22 @@
 ---
+import BlogPost from "../components/BlogPost.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 
+const allPosts = await Astro.glob('../pages/posts/*.md');
 
 ---
 <MainLayout title="DebugStart - Blog">
-    <a href="/">Inicio</a>
-    <a href="/about/">Sobre mi</a>
-    <a href="/blog/">Blog</a>
+  <section class="py-6 sm:py-12 dark:bg-teal-900/70 dark:text-gray-100">
+    <div class="container p-6 mx-auto space-y-8">
+      <div class="space-y-2 text-center">
+        <h2 class="text-3xl font-bold">Partem reprimique an pro</h2>
+        <p class="font-serif text-sm dark:text-gray-400">Qualisque erroribus usu at, duo te agam soluta mucius.</p>
+      </div>
+      <div class="grid grid-cols-1 gap-x-4 gap-y-8 md:grid-cols-2 lg:grid-cols-4">
+        
+        {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} tag={post.frontmatter.tags} img={post.frontmatter.image.url} alt={post.frontmatter.image.alt} datet={post.frontmatter.pubDate.slice(0,10)} author={post.frontmatter.author} />)}
 
-    <h1>Mi blog de Astro aprendizaje</h1>
-    <p>Aquí es donde publicaré acerca de mi viaje aprendiendo Astro.</p>
-    <ul>
-      <li><a href="/posts/post-1/">Publicación 1</a></li>
-      <li><a href="/posts/post-2/">Publicación 2</a></li>
-      <li><a href="/posts/post-3/">Publicación 3</a></li>
-    </ul>
+      </div>
+    </div>
+  </section>
 </MainLayout>
